[package]
name = "server-hyper-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
log = "0"
pin-project-lite = "0"
simple_logger = "4"
tokio = { version = "1", features = ["full"] }
mime_guess = "2"
walkdir = "2"

